@@ -274,6 +274,7 @@ static const char *s_cert_file=TEST_CERT,*s_key_file=NULL, *s_chain_file=NULL;
 #ifndef OPENSSL_NO_TLSEXT
 static const char *s_cert_file2=TEST_CERT2,*s_key_file2=NULL;
 static char *curves=NULL;
+static char *sigalgs=NULL;
 #endif
 static char *s_dcert_file=NULL,*s_dkey_file=NULL, *s_dchain_file=NULL;
 #ifdef FIONBIO
@@ -1205,6 +1206,11 @@ int MAIN(int argc, char *argv[])
 			if (--argc < 1) goto bad;
 			curves= *(++argv);
 			}
+		else if	(strcmp(*argv,"-sigalgs") == 0)
+			{
+			if (--argc < 1) goto bad;
+			sigalgs= *(++argv);
+			}
 #endif
 		else if	(strcmp(*argv,"-msg") == 0)
 			{ s_msg=1; }
@@ -1921,6 +1927,21 @@ bad:
 		if(ctx2 && !SSL_CTX_set1_curves_list(ctx2,curves))
 			{
 			BIO_printf(bio_err,"error setting curves list\n");
+			ERR_print_errors(bio_err);
+			goto end;
+			}
+		}
+	if (sigalgs)
+		{
+		if(!SSL_CTX_set1_sigalgs_list(ctx,sigalgs))
+			{
+			BIO_printf(bio_err,"error setting signature algorithms\n");
+			ERR_print_errors(bio_err);
+			goto end;
+			}
+		if(ctx2 && !SSL_CTX_set1_sigalgs_list(ctx2,sigalgs))
+			{
+			BIO_printf(bio_err,"error setting signature algorithms\n");
 			ERR_print_errors(bio_err);
 			goto end;
 			}
