@@ -3414,6 +3414,12 @@ long ssl3_ctrl(SSL *s, int cmd, long larg, void *parg)
 		s->cert->ecdh_tmp_auto = larg;
 		break;
 
+	case SSL_CTRL_SET_SIGALGS:
+		return tls1_set_sigalgs(s->cert, parg, larg);
+
+	case SSL_CTRL_SET_SIGALGS_LIST:
+		return tls1_set_sigalgs_list(s->cert, parg);
+
 	default:
 		break;
 		}
@@ -3695,6 +3701,12 @@ long ssl3_ctx_ctrl(SSL_CTX *ctx, int cmd, long larg, void *parg)
 	case SSL_CTRL_SET_ECDH_AUTO:
 		ctx->cert->ecdh_tmp_auto = larg;
 		break;
+
+	case SSL_CTRL_SET_SIGALGS:
+		return tls1_set_sigalgs(ctx->cert, parg, larg);
+
+	case SSL_CTRL_SET_SIGALGS_LIST:
+		return tls1_set_sigalgs_list(ctx->cert, parg);
 
 	case SSL_CTRL_SET_TLSEXT_AUTHZ_SERVER_AUDIT_PROOF_CB_ARG:
 		ctx->tlsext_authz_server_audit_proof_cb_arg = parg;
