@@ -2066,7 +2066,7 @@ int ssl3_send_certificate_request(SSL *s)
 
 		if (TLS1_get_version(s) >= TLS1_2_VERSION)
 			{
-			nl = tls12_get_req_sig_algs(s, p + 2);
+			nl = tls12_get_sig_algs(s, p + 2);
 			s2n(nl, p);
 			p += nl + 2;
 			n += nl + 2;
